adds src/main path and changes resource path in pom.xml accordingly

--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
                 ${project.build.directory}/classes/META-INF/resources
               </outputDirectory>
               <resources>
-                <resource><directory>./src/webapp</directory></resource>
+                <resource><directory>./src/main/webapp</directory></resource>
               </resources>
             </configuration>
           </execution>
